src/objects/Component__c.object
<CustomObject>
    <fields>
        <fullName>Api_Version__c</fullName>
        <label>Api Version</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Component</relationshipLabel>
        <relationshipName>Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Component_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Copmonents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>